# intel-cloud-optimizations-aws

./: .gitignore  Dockerfile  Dockerfile.inference  Dockerfile.training  README.md
.github/: CODEOWNERS
.github/workflows/: test-action.yml
ai_cloud/: Readme.md  pyproject.toml  requirements.txt
ai_cloud/ai_cloud/: base_model.py  server.py  storage.py  test_storage.py  utils.py
ai_cloud/ai_cloud/credit_risk/: fairness.py  xgb_model.py
ai_cloud/ai_cloud_v2/: fairness.py  main.py  model_v1.py  model_v2.ipynb  model_v2.py  preprocess.py  utils.py
app/: preprocessor.sav  server.py
app/loan_default/: data.py  predict.py
app/utils/: storage.py
distributed-training/nlp/: README.md  bench.py  gpt2_train_cfg.yaml  requirements.txt  sample.py  train.py
distributed-training/stable_diffusion/: README.md  makefile  textual_inversion_icom.py
dockerfiles/: Dockerfile.inference  Dockerfile.training
intel-ai-in-the-cloud/: .pdm.toml  pyproject.toml
intel-ai-in-the-cloud/intel_ai_in_the_cloud/: inference.py  main.py  training.py  utils.py
intel-ai-in-the-cloud/oneapi_cloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kubeflow/: README.md
kubernetes/: cluster.yaml  deployment.yaml  models-deployment.yml  models-service.yml  pod-autoscaler.yaml  service.yaml  serviceaccount.yaml
kubernetes/xgboost/: README.md
oneapi_cloud/: README.md  pyproject.toml
oneapi_cloud/oneapi_cloud/: main.py  server.py  utils.py
oneapi_cloud/oneapi_cloud/models/: model0.pkl
sagemaker/xgboost/: README.md
temp/: ecr-push.yml  eks-push.yml  k8s-pod1.yml
(+28 files in other folders)
