[tool.pdm]

[project]
name = "oneapi-cloud"
version = "0.1.0"
description = ""
authors = [
    {name = "Rahul Unnikrishnan Nair", email = "rahul.unnikrishnan.nair@intel.com"},
]
dependencies = [
    "scikit-learn-intelex>=2021.6.3",
    "joblib>=1.2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
