[tool.pdm]
[tool.pdm.dev-dependencies]
format = [
    "black>=22.10.0",
]

[project]
name = "oneapi-cloud"
version = "0.1.0"
description = ""
authors = [
    {name = "Rahul Unnikrishnan Nair", email = "rahul.unnikrishnan.nair@intel.com"},
]
dependencies = [
    "scikit-learn-intelex>=2021.6.3",
    "joblib>=1.2.0",
    "boto3>=1.26.23",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm.scripts]
format = "black oneapi_cloud/"
